--- a/css/style.css
+++ b/css/style.css
@@ -5,54 +5,64 @@
 }
 
 body{
-    max-width: 62.5rem;
-    max-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 main{
     max-width: 50rem;
-    background-color: aqua;
+    background-color:  rgba(158, 79, 232, 0.76);
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(6,1fr);
     grid-auto-rows: 120px;
 }
 
 header{
-    display: grid;
-    grid-column: 1/6;
+    grid-column: 1/7;
     grid-row: 1/4;
     background-color: brown;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
-.left{
-    background-color: rgb(168, 226, 207);
-    grid-column: 1/3;
-    grid-row: 1/6;
+aside{
+    width: 25rem;
+    height: 20rem;
+    background-color: aqua;
 }
-.top-right{
-    background-color: rgb(239, 126, 45);
-    grid-column: 3/6;
-    grid-row: 1/3;
+header :nth-child(1){
+    background-color: rgb(193, 245, 228);
+    grid-column: 1/span 3;
+    grid-row: 1/4;
+    justify-self: flex-start;
+    align-self: flex-start;
 }
-.bottom-right{
-    background-color: rgb(243, 178, 57);
-    grid-column: 3/6;
-    grid-row: 3/6;
-}
-.left-bottom{
+.left-button{
     background-color: antiquewhite;
-    width: 10vw;
     height: 5vh;
+    width: 10vw;
     border-radius: 3rem;
-    grid-column: 2/2;
-    grid-row: 4/4;
 }
+header :nth-child(2){
+    grid-column: 3/span 3;
+    grid-row: 1/2;
+    background-color: rgb(254, 102, 37);
+    align-self: flex-end;
+    justify-self: flex-start;
+}
+header :nth-child(3){
+    grid-column: 3/span 3;
+    grid-row: 2/4;
+    background-color: rgba(246, 166, 19, 0.913);
+    align-self: flex-end;
+    justify-self: flex-end;
+}
+
 
 nav{
     background-color: aliceblue;
-    grid-column: 1/6;
+    grid-column: 1/7;
     grid-row: 4/4;
     display: flex;
     justify-content: space-around;
@@ -61,8 +71,8 @@ nav{
 
 .mid-top{
     background-color: rgba(158, 79, 232, 0.76);
-    grid-column: 1/6;
-    grid-row: 5/7;
+    grid-column: 1/7;
+    grid-row: 4/7;
 }
 .mid-button{
     height: 5vh;
@@ -74,23 +84,32 @@ nav{
 
 .mid-bottom{
     background-color: rgb(215, 149, 27);
-    grid-column: 1/6;
-    grid-row: 7/9;
+    grid-column: 1/7;
+    grid-row: 7/10;
 }
 
 .calendar{
     background-color: antiquewhite;
-    grid-column: 1/6;
-    grid-row: 9/11;
+    grid-column: 1/7;
+    grid-row: 10/13;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;   
 }
-
+.calendar >*{
+    width: 16rem;
+    height: 12rem;
+    border: solid 1px black;
+}
 footer{
     background-color: rgb(100, 98, 98);
-    grid-column: 1/6;
-    grid-row: 11/13;
+    grid-column: 1/7;
+    grid-row: 13/15;
 }
-.up{
+footer :nth-child(1){
+    color: antiquewhite;
     background-color: grey;
-    grid-column: 1/6;
-    grid-row: 11/11;
+    grid-column: 1/span 6;
+    grid-row: 13/13;
 }
