--- a/css/style.css
+++ b/css/style.css
@@ -20,44 +20,63 @@ main{
 header{
     grid-column: 1/7;
     grid-row: 1/4;
-    background-color: brown;
-    display: grid;
-    grid-template-areas: 
-    "aside aside aside section section section"
-    "aside aside aside article article article"
+    background-color: rgba(246, 166, 19, 0.913);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    flex-wrap: wrap;
 }
-aside{
-    width: 20rem;
-    height: 25rem;
-}
-header :nth-child(1){
+
+header aside{
+    height: 23rem;
+    width: 25rem;
+    align-self: flex-start;
     background-color: rgb(193, 245, 228);
-    grid-area: aside;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+span{
+    color: antiquewhite;
+}
 .left-button{
     background-color: antiquewhite;
-    height: 5px;
-    width: 10px;
+    height: 5vh;
+    width: 10vw;
     border-radius: 3rem;
 }
-header :nth-child(2){
-    grid-area: section;
-    height: 10rem;
-    padding-top: 10rem;
+
+
+
+header section{
+    width: 25rem;
+    height: 13rem;
     background-color: rgb(254, 102, 37);
-
+    align-self: flex-end;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
-header :nth-child(3){
-    grid-area: article;
-    height: 10rem;
-    padding-top: 10rem;
+header section h2{
+    color: antiquewhite;
+}
+
+
+header article{
+    width: 25rem;
+    height: 9rem;
     background-color: rgba(246, 166, 19, 0.913);
+    align-self: flex-end;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
-
+header article h2{
+    color: antiquewhite;
+}
 
 nav{
     background-color: aliceblue;
@@ -73,6 +92,31 @@ nav{
     grid-column: 1/7;
     grid-row: 4/7;
 }
+.mid-top h2{
+    color: antiquewhite;
+    font-family: Frank Ruhl Libre;
+    font-size: 45px;
+    font-weight: 900;
+    line-height: 45px;
+    letter-spacing: -0.02em;
+    text-align: left;
+    width: 314px
+    height: 140px
+    top: 715px
+    left: 326px
+
+}
+.mid-top p{
+    width: 280px;
+    height: 237px;
+    font-family: Fira Sans;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: left;
+
+}
 .mid-button{
     height: 5vh;
     width: 10vw;
@@ -85,6 +129,24 @@ nav{
     background-color: rgb(215, 149, 27);
     grid-column: 1/7;
     grid-row: 7/10;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.mid-bottom h2{
+    color: antiquewhite;
+}
+.mid-bottom p{
+    width: 442px;
+    height: 280px;
+    font-family: Fira Sans;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: center;
+
 }
 
 .calendar{
@@ -106,9 +168,8 @@ footer{
     grid-column: 1/7;
     grid-row: 13/15;
 }
-footer :nth-child(1){
+footer button{
     color: antiquewhite;
     background-color: grey;
-    grid-column: 1/span 6;
-    grid-row: 13/13;
+    width: 50rem;
 }
