--- a/css/style.css
+++ b/css/style.css
@@ -190,17 +190,30 @@ nav{
     height: 12rem;
     border: solid 1px black;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .calendar button p{
     align-self: center;
+    margin-right: auto;
+}
+.calendar button h3{
+    color: rgb(167, 159, 159);
+    font-size: large;
+    align-self: flex-start;
+    margin-right: auto;
 }
 .calendar :nth-child(1){
     background-color: rgb(185, 237, 220);
+    font-size: large;
 }
+
+
 footer{
     background-color: rgb(100, 98, 98);
     grid-column: 1/7;
     grid-row: 13/15;
+    height: 61vh;
 }
 footer button{
     color: antiquewhite;
