--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ nav{
     line-height: 45px;
     letter-spacing: -0.02em;
     text-align: left;
-    margin-right: auto;
+    margin-right: 3rem;
 }
 .mid-top p{
     width: 200px;
@@ -128,30 +128,56 @@ nav{
     height: 5vh;
     width: 10vw;
     border-radius: 3rem;
-    margin-bottom: 5rem;
+    margin-bottom: 6rem;
     margin-left: 3rem;
 }
 
-.child{
-    grid-column: 1/2;
-    grid-row: 6/8;
-    width: 6rem;
-    height: 8rem;
-    margin-left: auto;
+.child1{
+    grid-column: 2/3;
+    grid-row: 6/9;
+    width: 12vw;
+    height: 30vh;
+    background-color: antiquewhite;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.adult{
+.child{
+    width: 4rem;
+    height: 10rem;
+    background-color: aquamarine;
+}
+.adult1{
     grid-column: 3/4;
     grid-row: 6/8;
-    width: 5rem;
-    height: 14rem;
+    width: 12vw;
+    height: 30vh;
+    background-color: antiquewhite;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.adult{
+    width: 4rem;
+    height: 10rem;
+    background-color: rgb(255, 230, 0);
+}
+.old1{
+    width: 12vw;
+    height: 30vh;
+    background-color: antiquewhite;
+    grid-column: 4/5;
+    grid-row: 6/9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .old{
-    grid-column: 4/5;
-    grid-row: 6/8;
-    width: 6rem;
-    height: 15rem;
-    margin-left: auto;
+    width: 4rem;
+    height: 10rem;
+    background-color: orangered;
 }
+
 .mid-bottom{
     background-color: rgb(215, 149, 27);
     grid-column: 1/7;
